grammar.js
    source_file: ($) => repeat($.statement),

    statement: ($) =>
      seq(
        choice(
          $.definition_statement,
          $.query_statement,
          $.mutation_statement,
          $.transaction_statement,
          $.import_statement,
          $.introspection_statement,
          $.prepare_statement,
          $.execute_statement,
        ),
        ";",
      ),

    // --- Definitions (SDL) ---
    query_statement: ($) => repeat1($.query_clause),

    query_clause: ($) =>
      choice(
        $.match_clause,
        $.where_clause,
        $.with_clause,
        $.return_clause,
        $.union_clause,
      ),

    match_clause: ($) =>
      seq(
        optional("OPTIONAL"),
        "MATCH",
        choice(commaSep1($.pattern), seq("[", commaSep1($.pattern), "]")),
        optional("CROSS_TYPE"),
      ),

    pattern: ($) =>
      choice(
        seq(
          "(",
          $.identifier,
          optional(seq(":", $.dotted_identifier)),
          optional($.pattern_object),
          ")",
        ),
        seq("PATH", $.identifier, "=", $.path_pattern),
      ),

    pattern_object: ($) =>
      seq("{", commaSep(choice($.pattern_prop, $.pattern_role)), "}"),
    pattern_prop: ($) => seq($.dotted_identifier, choice(":", "="), $.expression),
    where_clause: ($) =>
      seq(
        "WHERE",
        choice($.expression, seq("[", commaSep1($.expression), "]")),
      ),

    with_clause: ($) =>
      seq(
        "WITH",
        choice(commaSep1($.with_entry), seq("[", commaSep1($.with_entry), "]")),
      ),
    with_entry: ($) =>
      choice(
        seq($.expression, optional(seq("AS", $.identifier))),
        seq($.identifier, "(", commaSep(choice($.identifier, seq($.identifier, ":", $.expression))), ")", "AS", $.identifier),
      ),

    return_clause: ($) =>
      seq(
        "RETURN",
        optional("DISTINCT"),
        choice(
          commaSep1($.return_entry),
          seq("[", commaSep1($.return_entry), "]"),
        ),
        optional($.group_by_clause),
        optional($.having_clause),
        optional($.order_by_clause),
        optional($.limit_clause),
        optional($.skip_clause),
      ),

    return_entry: ($) => seq($.expression, optional(seq("AS", $.identifier))),

    group_by_clause: ($) => seq("GROUP", "BY", commaSep1($.expression)),
    having_clause: ($) =>
      seq(
        "HAVING",
        choice($.expression, seq("[", commaSep1($.expression), "]")),
      ),
    order_by_clause: ($) => seq("ORDER", "BY", commaSep1($.order_entry)),
    order_entry: ($) =>
      seq(
        $.expression,
        optional(choice("ASC", "DESC")),
        optional(seq("NULLS", choice("FIRST", "LAST"))),
      ),
    limit_clause: ($) => seq("LIMIT", $.expression),
    skip_clause: ($) => seq("SKIP", $.expression),

    mutation_statement: ($) =>
      choice(
        seq("CREATE", $.create_body),
        $.mixed_create_batch,
        $.merge_statement,
        $.set_statement,
        $.delete_statement,
        $.alter_statement,
        $.drop_statement,
        $.migrate_statement,
        seq("GRANT", "ACCESS", "ROLE", $.identifier, "TO", $.identifier),
        seq("REVOKE", "ACCESS", "ROLE", $.identifier, "FROM", $.identifier),
        seq("ADD", "ROLE", choice($.role_entry, seq("[", commaSep1($.role_entry), "]"))),
      ),

    alter_field_entry: ($) => seq($.identifier, $.alter_field_ops),

    alter_field_ops: ($) =>
      choice(
        $.alter_field_op, // Level 1: single op
        seq("[", commaSep($.alter_field_op), "]"), // Level 2: batch ops
      ),

    alter_field_op: ($) =>
      choice(
        seq("SET", "TYPE", $.type),
        seq("ADD", $.decorator),
        seq("DROP", $.decorator),
        seq("SET", "DEFAULT", $.expression),
        seq("DROP", "DEFAULT"),
      ),

    // --- ALTER ROLE ops ---
    alter_role_entry: ($) => seq($.identifier, $.alter_role_ops),

    alter_role_ops: ($) =>
      choice(
        $.alter_role_op, // Level 1: single op
        seq("[", commaSep($.alter_role_op), "]"), // Level 2: batch ops
      ),

    alter_role_op: ($) =>
      choice(
        seq("ADD", "ALLOWS", $.identifier, optional($.role_constraint_block)),
        seq("DROP", "ALLOWS", $.identifier),
        seq(
          "ADD",
          "CONSTRAINT",
          optional(seq($.identifier, ":")),
          $.expression,
        ),
        seq("DROP", "CONSTRAINT", $.identifier),
      ),

    alter_statement: ($) =>
      seq(
        "ALTER",
        choice(
          // NODE — levels 1 & 2
          seq(
            "NODE",
            choice(
              seq($.identifier, $.alter_ops),
              seq("[", commaSep1(seq($.identifier, $.alter_ops)), "]"),
            ),
          ),
          // EDGE — levels 1 & 2
          seq(
            "EDGE",
            choice(
              seq($.identifier, $.alter_ops),
              seq("[", commaSep1(seq($.identifier, $.alter_ops)), "]"),
            ),
          ),
          // FIELD — levels 1 & 2
          seq(
            "FIELD",
            choice(
              $.alter_field_entry,
              seq("[", commaSep1($.alter_field_entry), "]"),
            ),
          ),
          // ROLE — levels 1 & 2
          seq(
            "ROLE",
            choice(
              $.alter_role_entry,
              seq("[", commaSep1($.alter_role_entry), "]"),
            ),
          ),
          // Level 4 bulk mixed
          $.bulk_alter_block,
          // Non-type-hierarchy forms
          seq("SCHEMA", $.identifier, "[", repeat($.alter_schema_entry), "]"),
          seq(
            "USER",
            $.identifier,
            choice(
              seq("SET", "PASSWORD", $.string),
              seq("ADD", "ROLES", "[", commaSep($.identifier), "]"),
              seq("REMOVE", "ROLES", "[", commaSep($.identifier), "]"),
            ),
          ),
          seq(
            "NAMESPACE",
            $.dotted_identifier,
            "SET",
            "STRICT_PERMISSIONS",
            choice("ON", "OFF"),
          ),
        ),
      ),

    alter_ops: ($) =>
      choice(
        $.alter_entry, // Level 1: ALTER NODE Person ADD field
        seq("[", commaSep($.alter_entry), "]"), // Level 2: ALTER NODE Person [ ADD x, DROP y ]
      ),

    bulk_alter_block: ($) =>
      seq(
        "[",
        commaSep1(
          choice(
            seq(
              "NODE",
              choice(
                seq($.identifier, $.alter_ops),
                seq("[", commaSep1(seq($.identifier, $.alter_ops)), "]"),
              ),
            ),
            seq(
              "EDGE",
              choice(
                seq($.identifier, $.alter_ops),
                seq("[", commaSep1(seq($.identifier, $.alter_ops)), "]"),
              ),
            ),
            seq(
              "FIELD",
              choice(
                $.alter_field_entry,
                seq("[", commaSep1($.alter_field_entry), "]"),
              ),
            ),
            seq(
              "ROLE",
              choice(
                $.alter_role_entry,
                seq("[", commaSep1($.alter_role_entry), "]"),
              ),
            ),
          ),
        ),
        "]",
      ),

    alter_entry: ($) =>
      choice(
        seq("ADD", $.identifier, repeat($.decorator)),
        seq("DROP", $.identifier),
        seq("RENAME", $.identifier, "TO", $.identifier),
        seq(
          "ADD",
          "CONSTRAINT",
          optional(seq($.identifier, ":")),
          $.expression,
        ),
        seq("DROP", "CONSTRAINT", $.identifier),
        seq(
          "ADD",
          "ROLE",
          choice($.role_entry, seq("[", commaSep1($.role_entry), "]")),
        ),
        seq(
          "DROP",
          "ROLE",
          choice($.identifier, seq("[", commaSep1($.identifier), "]")),
        ),
      ),
    expression: ($) =>
      choice(
        $.conditional_expression,
        $.binary_expression,
        $.unary_expression,
        $.primary_expression,
      ),

    binary_expression: ($) =>
      choice(
        ...[
          ["||", 20],
          ["&&", 30],
          ["==", 40],
          ["!=", 40],
          ["<", 50],
          [">", 50],
          ["<=", 50],
          [">=", 50],
          ["IN", 50],
          ["|", 55],
          ["&", 55],
          ["+", 60],
          ["-", 60],
          ["*", 70],
          ["/", 70],
          ["%", 70],
          ["??", 75],
          ["LIKE", 50],
          ["ILIKE", 50],
          ["MATCHES", 50],
          ["IMATCHES", 50],
        ].map(([operator, precedence]) =>
          prec.left(precedence, seq($.expression, operator, $.expression)),
        ),
      ),

    primary_expression: ($) =>
      choice(
        $.literal,
        $.identifier,
        $.member_access,
        $.index_access,
        $.list_literal,
        $.window_call,
        $.function_call,
        $.subquery_expression,
        $.parameter_ref,
        $.enum_shorthand,
        seq("(", $.expression, ")"),
      ),

    member_access: ($) =>
      choice(
        prec.left(100, seq($.expression, choice(".", "?."), $.identifier)),
        prec.left(100, seq("this", ".", $.identifier)),
      ),

    function_call: ($) =>
      prec(
        90,
        seq($.identifier, "(", choice(alias("*", $.star_arg), commaSep($.expression)), ")"),
      ),

    identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,
    decorator: ($) =>
      seq(
        /@[a-zA-Z_][a-zA-Z0-9_]*/,
        optional(seq("(", commaSep($.expression), ")")),
      ),

    literal: ($) => choice($.string, $.number, $.boolean, "null"),

    string: ($) => /"([^"\\]|\\.)*"/,
    number: ($) => /-?\d+(\.\d+)?d?/,
    boolean: ($) => choice("true", "false"),
